@@ -66,3 +66,5 @@ export myexport bla ok
 ### Have you had any luck using git-annex before? (Sometimes we get tired of reading bug reports all day and a lil' positive end note does wonders)
 
 git-annex is amazing, thank you! 🤩
+
+> [[fixed|done]] --[[Joey]]
